much memory as it actually used(!) -- this was pointed out way back
in 1999 by Erik Reinhard and Erik Jansen, but the fix they gave me
got lost in the slightly broken release process at the time.  This
should make a big difference in memory usage, especially for the
new mesh primitive.  (I measured 30% less memory usage.)

Corrected ray weights for material mixtures.

Reduced the default -n setting for obj2mesh to take better advantage
of the smaller octree structure size.

Fixed bug in shadow cache where it was adding surfaces with antimatter
holes cut in them to the obstructor list.  Thanks to John Mardaljevic
for discovering and reporting the problem.

Adding ability in mkillum to incorporate BSDF data in calculation.
Internal interface (raypcalls) now used in place of rtrace process(es).

Fixed pixel alignment in pcomb for size reduction and enlargement.

Allow rtcontrib user to set -P and -PP options for persistent rendering.
The only caveat is that -n setting > 1 requires -PP rather than -P.

Added -c option to rtcontrib to facilitate cumulative calculations.

Added ability to incorporate LBNL Window 6 bidirectional scattering
distribution function (BSDF) data in mkillum.

****** COMPATIBILITY CHANGE ********
Fixed long-standing bug in source.cal, which caused it to produce
reversed anisotropic photometric distributions due to the
misorientation of the y-axis.  Thanks to Zack Rogers for discovering
and helping debug this problem.

Fixed long-standing bug in replmarks, where triangles with X-side
aligned with Z-axis would cause incorrect rotations.  Thanks to
Zack Rogers for finding this error.

Added rsensor program to compute sensor signal for daylighting controls.
Funding for this component was provided by the Architectural Energy
Corporation in Boulder, CO, and directed by Zack Rogers.

Added "planisphere" (stereographic) fisheye view type for traditional
daylighting analysis.  Feature requested & explained by Axel Jacobs.